Security Fixes on httacess content

--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,13 @@
 <IfModule mod_rewrite.c>
 	RewriteEngine On
+	Options -Indexes
 	Redirect /login /account/login
 	Redirect /logout /account/disconnected
-	RewriteRule ^core/?$ - [F,L]
-	RedirectMatch 403 ^/core/?$
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_URI} !-d
 	RewriteCond %{REQUEST_URI} !-f
-	RewriteRule ^(.*)$ index.php?origin=$1 [QSA,L]
+	RewriteRule ^(.*)$ index.php?origin=$1[QSA,L]
 </IfModule>
 
 <filesMatch "\.(htaccess|htpasswd|ini|phps|fla|psd|log|sh|view)$">
