--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,17 @@
-RewriteEngine on
-ErrorDocument 404 /Not_Found
-RewriteCond %{REQUEST_URI} !\.(?:css|js|jpe?g|gif|png)$ [NC]
-RewriteRule ^([a-zA-Z0-9\-\_\/]*)$ index.php?p=$1
+<IfModule mod_rewrite.c>
+	RewriteEngine On
+	Options -Indexes
+	Redirect /login /account/login
+	Redirect /logout /account/disconnected
+	RewriteCond %{REQUEST_FILENAME} !-d
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteCond %{REQUEST_URI} !-d
+	RewriteCond %{REQUEST_URI} !-f
+	RewriteCond %{REQUEST_URI} !\.(?:css|js|jpe?g|gif|png)$ [NC]
+	RewriteRule ^(.*)$ index.php?origin=$1 [QSA,L]
+</IfModule>
+
+<filesMatch "\.(htaccess|htpasswd|ini|phps|fla|psd|log|sh|view)$">
+	Order Allow,Deny
+	Deny from all
+</filesMatch>
